--- a/ICE-1/ICE-1.html
+++ b/ICE-1/ICE-1.html
@@ -6,8 +6,8 @@
 <body>
     <h1>Jamie Perlmutter</h1>
     <nav>
-        <a href="jamie.html">Jamie</a>
-        <a href="nate.html">Nate</a>
+        <a href="https://jamperl.github.io/ICE-1/ICE-1.html">Jamie</a>
+        <a href="https://nwellek.github.io/ICE-1/1-8.html">Nate</a>
     </nav><br>
     <div>
         <p>
