Added sketch to site

--- a/ICE-1/ICE-1.html
+++ b/ICE-1/ICE-1.html
@@ -11,7 +11,7 @@
     </nav><br>
     <div>
         <p>
-            <img src="images/M.png" alt="Block M" height="25%" width="25%">
+            <img src="images/Plan.jpg" alt="Website Sketch" height="25%" width="25%">
             <img src="images/T.jpg" alt="Toronto Skyline" height="25%" width="25%">
             <img src="images/R.png" alt="Raptors Logo" height="20%" width="20%">
         </p>
