--- a/ICE-5.html
+++ b/ICE-5.html
@@ -8,10 +8,10 @@
         <h1>ICE 5 - Position</h1>
         <h4>Jamie Perlmutter | SI 339</h4>
         
-        <a href='https://codepen.io/jamperl/pen/KQQrQP'>Flex Example</a><br>
-        <a href='https://codepen.io/jamperl/pen/mXXQKj'>Bootstrap 4 Example</a><br>
-        <a href='https://codepen.io/jamperl/pen/zRRMRK'>Grid Example</a><br>
-        <a href='https://codepen.io/jamperl/pen/zRRMjo'>Bootstrap 3 Example</a><br>
+        <a href='https://codepen.io/jamperl/pen/KQQrQP'>Flex Example<br></a>
+        <a href='https://codepen.io/jamperl/pen/mXXQKj'>Bootstrap 4 Example<br></a>
+        <a href='https://codepen.io/jamperl/pen/zRRMRK'>Grid Example<br></a>
+        <a href='https://codepen.io/jamperl/pen/zRRMjo'>Bootstrap 3 Example<br></a>
         
         <h2>THANK YOU!</h2>
     </body>
