--- a/ICE-js/challenge5.html
+++ b/ICE-js/challenge5.html
@@ -39,6 +39,15 @@
 	<script type="text/javascript">
 	// I used Two functions here.  Starter idea at: 
 	// https://codepen.io/ColleenEMc/pen/XmZzWw
+        function upDate(previewPic) {
+            document.getElementById("image").style.backgroundImage = "url('" + previewPic.src + "')";
+            document.getElementById("image").innerHTML = previewPic.alt;
+        }
+        
+        function unDo() {
+            document.getElementById("image").style.backgroundImage = "";
+            document.getElementById("image").innerHTML = "Hover over an image below";
+        }
 	</script>
 </head>
 
@@ -51,19 +60,24 @@
 		<!-- Your code goes in the img tag below.  Make sure to react to "hovering" and "tabbing": -->
 		<img class = "preview" 
 			alt = "Styling with a Bandana" 
-			src = "https://s3-us-west-2.amazonaws.com/s.cdpn.io/389177/bacon.jpg";
+			src = "https://s3-us-west-2.amazonaws.com/s.cdpn.io/389177/bacon.jpg"
+            onmouseover = "upDate(this)"
+            onmouseleave = "unDo()";
 			>
 
 
 		<!-- Your code goes in the img tag below.  Make sure to react to "hovering" and "tabbing": -->	
 		<img class = "preview" 
 			alt = "With My Boy" 
-			src = "https://s3-us-west-2.amazonaws.com/s.cdpn.io/389177/bacon2.JPG";>
+			src = "https://s3-us-west-2.amazonaws.com/s.cdpn.io/389177/bacon2.JPG"
+            onmouseover = "upDate(this)"
+            onmouseleave = "unDo()";>
 	
 		<!-- Your code goes in the img tag below.  Make sure to react to "hovering" and "tabbing": -->
 		<img class = "preview" tabindex = "1" 
 			src = "https://s3-us-west-2.amazonaws.com/s.cdpn.io/389177/bacon3.jpg" 
-			alt = "Young Puppy";>
+			alt = "Young Puppy"
+            onmouseover = "upDate(this)"
+            onmouseleave = "unDo()";>
 </body>
 </html>
-	
