--- a/ICE-js/challenge1.html
+++ b/ICE-js/challenge1.html
@@ -21,16 +21,13 @@ When you test your form at the moment, you'll notice that you can click on the c
     
     <script type="text/javascript">
 	function toggleEmail(){
-		var emailField = document.querySelector('#emailfield');
-        var subscribe = document.querySelector('#subscribe');
-        
-        if (subscribe.checked == true) {
-            emailField.style.display = 'block';
-        } else {
-            emailField.style.display = 'none';
-        }
-
-	} 
+    		if (document.getElementById("subscribe").checked) {
+        		document.getElementById("emailfield").style.display = "block";
+      		}
+      		else {
+        		document.getElementById("emailfield").style.display = "none";
+		}
+     	}
     </script>
   </head>
   <body>
