--- a/ICE-js/challenge3.html
+++ b/ICE-js/challenge3.html
@@ -8,13 +8,13 @@
         var isRadio1Checked = document.getElementById("opt-straw").checked;
         var isRadio2Checked = document.getElementById("opt-blue").checked;
         
-        if ((!isRadio1Checked && !isRadio2Checked) || (isRadio1Checked && isRadio2Checked)) {
-            return false;
-        } else {
-            console.log("Success!")
-            return true;
-        }
-		} 
+        if (isRadio1Checked || isRadio2Checked) {
+          return true;
+      	}
+      	else {
+        	alert("Please select your favorite berry!");
+        	return false;
+      	}
     </script>
 </head>
 <body>
