--- a/ICE-js/challenge3.html
+++ b/ICE-js/challenge3.html
@@ -5,15 +5,14 @@
 	<title>Challenge 3</title>
 	<script type="text/javascript">
 		function checkForm(){
-		var isRadio1Checked = document.getElementById("opt-straw").checked;
-		var isRadio2Checked = document.getElementById("opt-blue").checked;
-
-		if ((!isRadio1Checked && !isRadio2Checked) || (isRadio1Checked && isRadio2Checked)) {
-		    return false;
-		} else {
-		    console.log("Success!")
-		    return true;
-		}
+			if (document.getElementById("opt-straw").checked || document.getElementById("opt-blue").checked) {
+				return true;
+      			}
+      			else {
+        			alert("Please select your favorite berry!");
+        		return false;
+      			}
+    		}
 	} 
 	</script>
 </head>
