--- a/ICE-js/challenge1.html
+++ b/ICE-js/challenge1.html
@@ -16,7 +16,9 @@ When you test your form at the moment, you'll notice that you can click on the c
   <head>
     <title>JavaScript Challenges</title>
     <style>
-    /*    YOUR CODE HERE - check Step 1*/ 
+    #emailfield {
+      display: none;
+    }
     </style>
     
 	<script type="text/javascript">
