--- a/ICE-js/challenge4.html
+++ b/ICE-js/challenge4.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Challenge 4</title>
+    <meta charset="UTF-8">
+    <title>Challenge 4</title>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <style>
 
     .errormsg { 
         /*font: Use a cool Google font*/
+	font-family: 'Source Sans Pro', sans-serif;
     	color:red;
     	display:none; } 
     </style>
