--- a/Personal-Portfolio/index.html
+++ b/Personal-Portfolio/index.html
@@ -58,7 +58,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-md-offset-3">
-                        <h2 class="biz-name" id="section_name" >WHAT WE DO</h2>
+                        <h2 class="biz-name section_name">WHAT WE DO</h2>
                     </div>
                 </div>
                 <div class="row">
@@ -99,7 +99,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 col-md-6">
-                        <div class='biz-name' id='section_name'>
+                        <div class="biz-name section_name">
                             <h2>ABOUT DAWN</h2>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
 
         <section class="display-page" id="past">
             <div class="front-content" id="gallery">
-                <h2 class="biz-name" id="section_name" >PAST WORK</h2>
+                <h2 class="biz-name section_name">PAST WORK</h2>
             </div>
             <div class="grid">
                 <img class="cell" tabindex="1" src="images/closet1.jpg" alt="Organized Closet by Dawn"/>
@@ -159,7 +159,7 @@
 
         <section class="display-page" id="contact">
             <div class="container">
-                <h2 class="biz-name" id="section_name" >Book or Contact Today!</h2>
+                <h2 class="biz-name section_name">Book or Contact Today!</h2>
                 <div id="contact-form">
                     <form method="POST" action="https://formspree.io/email@email.com">
                         <input type="hidden" name="_subject" value="Love It or Leave It Booking Request" />
